set(Src
    BasicDelegates.cpp
    CommonResources.cpp
    CommonUtils.cpp
    CompiledShaderPatchCollection.cpp
    DeferredShaderResource.cpp
    DescriptorSetAccelerator.cpp
    DrawableMaterial.cpp
    Drawables.cpp
    ParsingContext.cpp
    PipelineAccelerator.cpp
    RenderPass.cpp
    RenderPassUtils.cpp
    RenderStateResolver.cpp
    ShaderVariationSet.cpp
    SimpleModelDeform.cpp
    SimpleModelRenderer.cpp
    SkinDeformer.cpp
    TechniqueDelegates.cpp
    Techniques.cpp
    TechniqueUtils.cpp
	Services.cpp
	ModelCache.cpp)
set(Headers
    BasicDelegates.h
    CommonBindings.h
    CommonResources.h
    CommonUtils.h
    CompiledRenderStateSet.h
    CompiledShaderPatchCollection.h
    DeferredShaderResource.h
    DrawableDelegates.h
    DrawableMaterial.h
    Drawables.h
    ParsingContext.h
    PipelineAccelerator.h
    RenderPass.h
    RenderPassUtils.h
    RenderStateResolver.h
    ShaderVariationSet.h
    SimpleModelDeform.h
    SimpleModelRenderer.h
    SkinDeformer.h
    TechniqueDelegates.h
    TechniqueMaterial.h
    Techniques.h
    TechniqueUtils.h
	Services.h
	ModelCache.h)

BasicLibrary(RenderCoreTechniques "${Src};${Headers}")
target_link_libraries(RenderCoreTechniques ForeignMisc)  # required to pull in interface include directories (etc)
