
foreach (metal_macro metal_name IN ZIP_LISTS MetalSelectMacros MetalSelectName)

    set(Src
        NativeModelViewer.cpp
        ../Shared/SampleRig.cpp)

    if (WIN32)
        list(APPEND Src WinAPI/WindowStartup.cpp)
    endif()

    # we need the "WIN32" flag in add_executable here to ensure that cmake adds the /subsystem:windows flag to the linker command line (otherwise we get a console app) 
    add_executable(NativeModelViewer WIN32 "${Src};${Headers}")
    xle_configure_executable(NativeModelViewer)

    target_link_libraries(NativeModelViewer PRIVATE RenderCore_${metal_name} RenderCoreTechniques-${metal_name} BufferUploads-${metal_name})
    target_link_libraries(NativeModelViewer PRIVATE RenderOverlays-${metal_name} PlatformRig-${metal_name} RenderCoreLightingEngine-${metal_name} RenderCoreAssetsServices)
    target_link_libraries(NativeModelViewer PRIVATE ToolsRig-${metal_name})

endforeach()
